# HeavyWeapon

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  README.md  main.cpp
docs/: ClassDiagram.dia
include/: BulletPool.h  Enemy.h  Game.h  GameEntity.h  HealthEntity.h  LevelManager.h  Player.h  Utils.h
include/Background/: Background.h
include/Enemy/: EnemyBase.h  EnemyManager.h  WW2Plane.h  all.h
resources/textures/src/: TestEnemy.xcf  TurretTest.xcf
src/: BulletPool.cpp  Game.cpp  GameEntity.cpp  HealthEntity.cpp  Player.cpp  Utils.cpp
src/Background/: Background.cpp
src/Enemy/: EnemyBase.cpp  EnemyManager.cpp  WW2Plane.cpp
